# Compliance-Gate

./: .env.example  .gitignore  AD.csv  ASSET.CSV  Makefile  README.md  UEM.csv  agents.md  alembic.ini  create_db.py  dashboard_fixed.ts  docker-compose.yml  local_db.sqlite3  mypy.ini  pre-commit-config.yaml  pyproject.toml  pytest.ini  requirements.txt  ruff.toml
docker/: Dockerfile
docs/: AUTHENTICATION_FLOW_MAP_2026-03-11.md  BACKEND_MAINTAINABILITY_AND_FRONTEND_PENTEST_2026-03-11.md  BACKEND_MAINTAINABILITY_AUDIT_2026-03-11.md  REVALIDATION_SECURITY_MAINTAINABILITY_2026-03-11.md  main_view.md
frontend/: .env.example  .gitignore  FRONTEND_MAINTAINABILITY_AUDIT_2026-03-11.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.node.json  vite.config.js  vite.config.ts
frontend/docker/: Dockerfile  nginx.conf
frontend/e2e/: main_view_full_flow.e2e.ts
frontend/electron/: main.cjs  preload.cjs
frontend/scripts/: auth_flow_check.ts  electron-dev.mjs  main_view_full_flow_check.ts  main_view_profile_check.ts
frontend/src/: App.tsx  DashboardView.tsx  SetupView.tsx  app.ts  app.tsx  index.css  main.ts  main.tsx
frontend/temp/: README.md  notes.md  templates.md
notes/: auth_core_v1.md
retests/: .gitignore  README.md  ts_column_layout_reference.md
scripts/: auth_mfa_persistence_check.py  reset_auth_user.py  verify_all.sh  verify_env.py
templates/: frontend_IT_first_view_main_menu.jsx  frontend_authentication_template.jsx
tests/: test_profiles.py
workspace/: EDR.csv
(+318 files in other folders)
