[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "compliance-gate"
version = "0.1.0"
description = "Backend para o Compliance Gate"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.30.1",
    "pydantic>=2.7.4",
    "pydantic-settings>=2.3.4",
    "sqlalchemy>=2.0.30",
    "alembic>=1.13.1",
    "psycopg2-binary>=2.9.9",
    "polars>=0.20.31",
    "duckdb>=1.0.0",
    "redis>=5.0.4",
    "celery>=5.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.2",
    "pytest-cov>=5.0.0",
    "pytest-asyncio>=0.23.7",
    "ruff>=0.4.8",
    "mypy>=1.10.0",
    "pre-commit>=3.7.1",
    "httpx>=0.27.0", # for FastAPI TestClient
]

[tool.hatch.envs.default.scripts]
dev = "uvicorn src.compliance_gate.main:app --reload --host 0.0.0.0 --port 8000"
format = "ruff format ."
lint = "ruff check ."
test = "pytest"

[tool.hatch.build.targets.wheel]
packages = ["src/compliance_gate"]
